# tutorial-taskipy

./: pyproject.toml
src/: app.py
